quickstart/java-app-k8s-demo/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-svc
spec:
  type: NodePort
  selector:
    app: java-app
  ports:
    - name: http
      protocol: TCP
      nodePort: 30080
      port: 80
      targetPort: 8080
